fix: pages align on mobile

--- a/frontend2/src/pages/Profile/Profile.module.css
+++ b/frontend2/src/pages/Profile/Profile.module.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .container {
      max-width: 1100px;
      width: 100%;
