--- a/frontend2/src/pages/Reservation/Reservation.module.css
+++ b/frontend2/src/pages/Reservation/Reservation.module.css
@@ -1,5 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
 .container {
-     max-width: 1200px;
+     max-width: 1300px;
      margin: 2rem auto;
      padding: 1rem;
      display: flex;
@@ -28,7 +32,7 @@
      flex: 2 1 600px;
      min-width: 400px;
      max-width: 100%;
-     overflow-x: hidden;
+     overflow-x: auto;
      box-sizing: border-box;
      background-color: white;
      padding: 1.5rem;
@@ -56,6 +60,6 @@
      .master,
      .reviews {
           min-width: auto;
-          flex: 1 1 auto;
+          flex: 1 1 100%;
      }
 }
